IMAGE_OT_invert() misses UNDO support, won't update if buffer is float #37326

Closed
opened 2013-11-05 15:48:03 +01:00 by CodeManX · 8 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7

- Blender version with error, and version that worked ---

2.69

- Short description of error ---

The Invert Channels operator does not properly support UNDO, images will corrupt if used together with Paint strokes.

If the buffer type is float, the image won't update in Image editor (buffer itself is fine though, Image.update(), Area.update() with python correct it).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Create a new image, 32bit float
  2. Go to Paint mode
  3. Draw a few strokes
  4. Image > Invert > Invert Red Channel (for instance)
  5. Black won't change to red
  6. Ctrl + Z
  7. Invert op result becomes visible, last stroke is removed and around the stroke path, color is reverted to black in squares (see attached image)

There is no image undo stack, only paint. Would it still be appropriate to use?%%%

%%%--- Operating System, Graphics card --- Windows 7 - Blender version with error, and version that worked --- 2.69 - Short description of error --- The Invert Channels operator does not properly support UNDO, images will corrupt if used together with Paint strokes. If the buffer type is float, the image won't update in Image editor (buffer itself is fine though, Image.update(), Area.update() with python correct it). - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Create a new image, 32bit float 2. Go to Paint mode 3. Draw a few strokes 4. Image > Invert > Invert Red Channel (for instance) 5. Black won't change to red 6. Ctrl + Z 7. Invert op result becomes visible, last stroke is removed and around the stroke path, color is reverted to black in squares (see attached image) There is no image undo stack, only paint. Would it still be appropriate to use?%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Bastien, if you're looking into the issue please assign it to self. Otherwise assign to me :)%%%

%%%Bastien, if you're looking into the issue please assign it to self. Otherwise assign to me :)%%%

%%%Nah, had just a very quick look at it, the UNDO flag is enabled for this op, so it’s not a simple fix (at least for me)… :/%%%

%%%Nah, had just a very quick look at it, the UNDO flag is enabled for this op, so it’s not a simple fix (at least for me)… :/%%%

%%%This could use the paint undo stack. Maybe it's not so good abusing this for out of paint operations. But if you think it's a good idea assign to me and I'll do it.%%%

%%%This could use the paint undo stack. Maybe it's not so good abusing this for out of paint operations. But if you think it's a good idea assign to me and I'll do it.%%%
Sergey Sharybin removed their assignment 2013-11-18 09:24:10 +01:00
Antonis Ryakiotakis was assigned by Sergey Sharybin 2013-11-18 09:24:10 +01:00

Fixed part of the issue in master branch now, so now float buffers will be nicely updated.

Antony, fixing remaining issue with undo in paint mode seems a bit more tricky. This is stack conflicts (global one where Invert operator pushes the data and local one where the strokes are stored). Seems to be the only way is to use paint undo stack for invert when in paint mode..

Will re-assign to you, since you're more familiar with that system :)

Fixed part of the issue in master branch now, so now float buffers will be nicely updated. Antony, fixing remaining issue with undo in paint mode seems a bit more tricky. This is stack conflicts (global one where Invert operator pushes the data and local one where the strokes are stored). Seems to be the only way is to use paint undo stack for invert when in paint mode.. Will re-assign to you, since you're more familiar with that system :)

Attached a patch. I could use a LGTM from other devs as well. Mostly wondering about bad level calls from inclusion of sculpt-paint headers in space_image operations. Also having an operator only undoable on certain situations seems slightly bad to me.

Attached a patch. I could use a LGTM from other devs as well. Mostly wondering about bad level calls from inclusion of sculpt-paint headers in space_image operations. Also having an operator only undoable on certain situations seems slightly bad to me.

Note, do not commit patch without scons inclusion for sculpt_paint as well

Note, do not commit patch without scons inclusion for sculpt_paint as well

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37326
No description provided.