Fix part of T37326: IMAGE_OT_invert won't update if buffer is float

Need to mark display buffer as out-of-date.